# hermes-lang

./: CHANGELOG.md  README.md  TESTING-GUIDE.md  USAGE.md  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
docs/raycast/: hermes-compile.sh  hermes-help.sh
examples/: api_server.herm  classes.herm  crys.herm  fibonacci.herm  hello.herm
hermes/: __init__.py  __main__.py  cli.py  lexer.py  onboarding.py  parser.py  transpiler.py
hermes_lang.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_examples.py
