[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-lang"
version = "0.1.0"
description = "Cultural syntax transpiled to Python"
readme = "README.md"
authors = [{name = "Pilan AI", email = "raghu@pilan.ai"}]
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
keywords = ["transpiler", "language", "python", "cultural-computing"]

[project.urls]
Homepage = "https://github.com/Pilan-AI/hermes-lang"
Repository = "https://github.com/Pilan-AI/hermes-lang"

[project.scripts]
hermes = "hermes.cli:main"

[tool.setuptools]
packages = ["hermes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
